Feat : Role 파일 생성 & Build : build.gradle의존성 추가 및 User 수정